--- a/style.css
+++ b/style.css
@@ -25,13 +25,13 @@ header{
     top: 0;
     z-index: 1400;
     height: 4.4rem;
-    background-color: rgba(0,0,0,.8)
+    background-color: rgba(0,0,0,.8);
     backdrop-filter: blur(2rem);
 }
 .nav-list{
     list-style: none;
     display: flex;
-    align-items: center
+    align-items: center;
     justify-content: space-between;
     margin: 0 -1rem;
 }
@@ -70,7 +70,7 @@ margin-top: 4.4rem;
 }
 
 .title{
-color: #fff
+color: #fff;
 text-align: center;
 padding-top: 5.5rem;
 }
@@ -372,3 +372,4 @@ font-weight: 400;
             font-size: 1.9rem;
         }
     }
+
